--- a/openwrt/snapcast/Makefile
+++ b/openwrt/snapcast/Makefile
@@ -8,15 +8,14 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME := snapcast
-PKG_VERSION := 0.27.0
-PKG_RELEASE := $(PKG_SOURCE_VERSION)
+PKG_RELEASE := 1
 PKG_USE_MIPS16 := 0
 
 # PKG_MIRROR_HASH=skip
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/badaix/snapcast.git
-PKG_SOURCE_VERSION:=v0.27.0
-PKG_BUILD_DIR:=$(BUILD_DIR)/snapcast-$(PKG_VERSION)
+PKG_SOURCE_VERSION:=6190041e863968d76b6d16140bba90be6dff848f
+PKG_SOURCE_DATE:=2024-12-19
 
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/cmake.mk
